# seo-agent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  action.yml  pyproject.toml  requirements-dev.txt  seo_agent.py  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  seo-audit.yml
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  DISCOVERABILITY.md  GITHUB_ACTION.md  INTEGRATIONS.md  OUTPUT_SCHEMA.md  ROADMAP.md  TODO.md  TROUBLESHOOTING.md
seo_agent/: __init__.py  analyzer.py  audit.py  cli.py  config.py  constants.py  models.py  network.py  reporting.py
tests/: test_agent.py  test_config.py  test_reporting.py
