[metadata]
name = seo-agent
version = 0.1.1
description = Lightweight CLI that runs a technical SEO audit for a URL and outputs prioritized, actionable recommendations.
long_description = file: README.md
long_description_content_type = text/markdown
author = Shubhendu Vaid
license = MIT
license_files = LICENSE
url = https://github.com/ShubhenduVaid/seo-agent
project_urls =
    Homepage = https://github.com/ShubhenduVaid/seo-agent
    Source = https://github.com/ShubhenduVaid/seo-agent
    Issues = https://github.com/ShubhenduVaid/seo-agent/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Site Management
    Topic :: Security
    Topic :: Utilities
keywords = seo, audit, cli, web

[options]
packages = find:
python_requires = >=3.9
install_requires =
include_package_data = True

[options.entry_points]
console_scripts =
    seo-agent = seo_agent.cli:main

[options.packages.find]
where = .
